--- a/config.toml
+++ b/config.toml
@@ -72,16 +72,19 @@ googleAnalytics = "UA-188589894-1"
     icon = "fa fa-github"
     weight = 3
     url = "https://github.com/asquare8/"
+    target = "blank"
 [[params.social]]
     name = "Twitter"
     icon = "fa fa-twitter"
     weight = 1
     url = "https://twitter.com/asquare08/"
+    target = "blank"
 [[params.social]]
     name = "LinkedIn"
     icon = "fa fa-linkedin"
     weight = 2
     url = "https://www.linkedin.com/in/iitjatul/"
+    target = "blank"
 
 
 [languages]
