--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ googleAnalytics = "UA-188589894-1"
     since = ''
 
     # Git Commit in Footer, uncomment the line below to enable it.
-    commit = "https://github.com/luizdepra/hugo-coder/tree/"
+    # commit = "https://github.com/luizdepra/hugo-coder/tree/"
 
     rtl = false
 
